--- a/api/pom.xml
+++ b/api/pom.xml
@@ -43,6 +43,28 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-spring5-embedded</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
+
+<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-hibernate-cache-v53</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
+
+<infinispanVersion>13.0.22.Final</infinispanVersion>
+
+
+
+<dependency>
+<groupId>org.infinispan</groupId>
+<artifactId>infinispan-spring5-embedded</artifactId>
+</dependency>
+<groupId>org.infinispan</groupId>
+<artifactId>infinispan-hibernate-cache-v53</artifactId>
+		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 		</dependency>
