--- a/api/pom.xml
+++ b/api/pom.xml
@@ -53,7 +53,19 @@
     <artifactId>infinispan-hibernate-cache-v53</artifactId>
     <version>${infinispanVersion}</version>
 </dependency>
+<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-spring5-embedded</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
 
+<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-hibernate-cache-v53</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
+
+<infinispanVersion>13.0.22.Final</infinispanVersion>
 <infinispanVersion>13.0.22.Final</infinispanVersion>
 
 
@@ -88,14 +100,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aop</artifactId>
-		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
