--- a/test/pom.xml
+++ b/test/pom.xml
@@ -120,6 +120,20 @@
 
 <infinispanVersion>13.0.22.Final</infinispanVersion>
 
+<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-spring5-embedded</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
+
+<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-hibernate-cache-v53</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
+
+<infinispanVersion>13.0.22.Final</infinispanVersion>
+
 
 
 <dependency>
