--- a/test/pom.xml
+++ b/test/pom.xml
@@ -136,6 +136,26 @@
 <groupId>org.infinispan</groupId>
 <artifactId>infinispan-spring5-embedded</artifactId>
 </dependency>
+<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-spring5-embedded</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
+
+<dependency>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-hibernate-cache-v53</artifactId>
+    <version>${infinispanVersion}</version>
+</dependency>
+
+<infinispanVersion>13.0.22.Final</infinispanVersion>
+
+
+
+<dependency>
+<groupId>org.infinispan</groupId>
+<artifactId>infinispan-spring5-embedded</artifactId>
+</dependency>
 
 
 	
